--- a/Mini-SSS3-Firmware/platformio.ini
+++ b/Mini-SSS3-Firmware/platformio.ini
@@ -16,5 +16,6 @@ lib_deps =
 	Arduino_DebugUtils
 	arduino-libraries/ArduinoBearSSL@^1.7.2
 	arduino-libraries/ArduinoMqttClient@^0.1.5
+	arduino-libraries/Arduino_JSON@^0.1.0
 monitor_filters = colorize
 monitor_flags = --raw
