--- a/AWS-FrontEnd/package.json
+++ b/AWS-FrontEnd/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@aws-amplify/ui-react": "^1.2.22",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
     "@material-ui/icons": "^4.11.2",
@@ -11,6 +12,7 @@
     "@mui/material": "^5.0.4",
     "@mui/styles": "^5.0.1",
     "@mui/x-data-grid": "^5.0.0-beta.4",
+    "aws-amplify": "^4.3.4",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-scripts": "2.1.8",
