--- a/AWS-FrontEnd/amplify/.config/project-config.json
+++ b/AWS-FrontEnd/amplify/.config/project-config.json
@@ -1,5 +1,8 @@
 {
-  "projectName": "authcra",
+  "providers": [
+    "awscloudformation"
+  ],
+  "projectName": "MiniSSS3AWSFrontEnd",
   "version": "3.1",
   "frontend": "javascript",
   "javascript": {
@@ -7,11 +10,8 @@
     "config": {
       "SourceDir": "src",
       "DistributionDir": "build",
-      "BuildCommand": "npm run-script build",
-      "StartCommand": "npm run-script start"
+      "BuildCommand": "npm.cmd run-script build",
+      "StartCommand": "npm.cmd run-script start"
     }
-  },
-  "providers": [
-    "awscloudformation"
-  ]
+  }
 }
