--- a/AWS-FrontEnd/amplify/backend/backend-config.json
+++ b/AWS-FrontEnd/amplify/backend/backend-config.json
@@ -4,5 +4,11 @@
 			"service": "Cognito",
 			"providerPlugin": "awscloudformation"
 		}
-	}
+	},
+	"iotpubsub": {
+		"iotpolicy": {
+		  "service": "IoT-Message-Viewer",
+		  "providerPlugin": "awscloudformation"
+		}
+	  }
 }
