--- a/AWS-FrontEnd/package.json
+++ b/AWS-FrontEnd/package.json
@@ -6,15 +6,19 @@
     "@aws-amplify/ui-react": "^1.2.22",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
+    "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
     "@mui/icons-material": "^5.0.4",
     "@mui/material": "^5.0.4",
     "@mui/styles": "^5.0.1",
     "@mui/x-data-grid": "^5.0.0-beta.4",
+    "@risingstack/react-easy-state": "^6.3.0",
     "aws-amplify": "^4.3.4",
+    "aws-sdk": "^2.1023.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "react-json-view": "^1.21.3",
     "react-scripts": "2.1.8",
     "react-swipeable-views": "^0.14.0",
     "react-toggle-button": "^2.2.0",
